from datetime import datetime as datetime_type
from uuid import UUID

from sqlalchemy import (
    BigInteger,
    Boolean,
    Column,
    Double,
    Float,
    ForeignKey,
    Identity,
    Integer,
    Numeric,
    String,
    Table,
    Text,
    func,
)
from sqlalchemy.dialects.postgresql import TIMESTAMP, UUID as PGUUID
from sqlalchemy.orm import DeclarativeBase, Mapped, mapped_column

from core.enums import (
    PendingStatus,
    PendingStatusType,
    RecordType,
    UserState,
    UserStateType,
)


class Base(DeclarativeBase):
    pass


class User(Base):
    __tablename__ = "users"

    user_id: Mapped[int] = mapped_column(BigInteger, primary_key=True)
    tlg_name: Mapped[str | None] = mapped_column(String(255))
    tlg_username: Mapped[str | None] = mapped_column(String(255))
    username: Mapped[str | None] = mapped_column(String(255), unique=True)
    name: Mapped[str | None] = mapped_column(String(255))
    reg_stat: Mapped[UserState] = mapped_column(
        UserStateType,
        default=UserState.DATA_CLEARED,
        server_default="0",
    )
    hash: Mapped[str | None] = mapped_column(String(255))
    hash_date: Mapped[datetime_type | None] = mapped_column(TIMESTAMP)
    items: Mapped[str] = mapped_column(Text, server_default="")
    age: Mapped[int | None] = mapped_column(Integer)
    lng: Mapped[str | None] = mapped_column(String)
    comm: Mapped[str | None] = mapped_column(String)
    reg_run: Mapped[datetime_type | None] = mapped_column(
        TIMESTAMP, server_default=func.now()
    )
    reg_end: Mapped[datetime_type | None] = mapped_column(TIMESTAMP)
    sex: Mapped[str | None] = mapped_column(String(3))
    rating: Mapped[int | None] = mapped_column(Integer)
    email: Mapped[str | None] = mapped_column(Text)
    region: Mapped[str | None] = mapped_column(Text)
    token_version: Mapped[int] = mapped_column(Integer, default=0, nullable=False)


class PendingRegistration(Base):
    __tablename__ = "pending_registrations"

    id: Mapped[int] = mapped_column(
        BigInteger,
        primary_key=True,
        server_default=Identity(),
    )
    code: Mapped[str] = mapped_column(String(20), unique=True, index=True)
    token: Mapped[str] = mapped_column(String(50), unique=True, index=True)
    status: Mapped[PendingStatus] = mapped_column(
        PendingStatusType,
        default=PendingStatus.AWAITING_CODE,
        server_default="0",
    )
    code_created_at: Mapped[datetime_type] = mapped_column(
        TIMESTAMP, server_default=func.now()
    )
    token_created_at: Mapped[datetime_type] = mapped_column(
        TIMESTAMP, server_default=func.now()
    )
    reg_run: Mapped[datetime_type | None] = mapped_column(TIMESTAMP)
    confirmed_at: Mapped[datetime_type | None] = mapped_column(TIMESTAMP)
    telegram_id: Mapped[int | None] = mapped_column(BigInteger)
    telegram_username: Mapped[str | None] = mapped_column(String(255))
    telegram_name: Mapped[str | None] = mapped_column(String(255))


class Publication(Base):
    __tablename__ = "publs"

    publ_id: Mapped[int] = mapped_column(Integer, primary_key=True)
    type: Mapped[str | None] = mapped_column(Text)
    author: Mapped[str | None] = mapped_column(Text)
    year: Mapped[int | None] = mapped_column(Integer)
    name: Mapped[str | None] = mapped_column(Text)
    external: Mapped[str | None] = mapped_column(Text)
    language: Mapped[str | None] = mapped_column(Text)
    ural: Mapped[int | None] = mapped_column(Integer)
    pdf_file: Mapped[str | None] = mapped_column(Text)
    bib_file: Mapped[str | None] = mapped_column(Text)
    arj_file: Mapped[str | None] = mapped_column(Text)
    resume: Mapped[str | None] = mapped_column(Text)
    # TODO: change type to bool in migration
    coords: Mapped[int | None] = mapped_column(Integer)
    cover: Mapped[int | None] = mapped_column(Integer, server_default="0")
    occs: Mapped[int | None] = mapped_column(Integer)
    spec: Mapped[int | None] = mapped_column(Integer)
    e_author: Mapped[str | None] = mapped_column(Text)
    e_name: Mapped[str | None] = mapped_column(Text)


class Action(Base):
    __tablename__ = "actions"

    id: Mapped[int] = mapped_column(
        BigInteger,
        primary_key=True,
        server_default=Identity(),
    )
    user_id: Mapped[int] = mapped_column(BigInteger)
    user_ip: Mapped[str | None] = mapped_column(Text)
    action: Mapped[str] = mapped_column(Text, nullable=False)
    object: Mapped[str | None] = mapped_column(Text)
    datetime: Mapped[datetime_type] = mapped_column(
        TIMESTAMP, nullable=False, server_default=func.now()
    )


class EventRecord(Base):
    __tablename__ = "event_records"

    id: Mapped[UUID] = mapped_column(PGUUID(as_uuid=True), primary_key=True)
    publ_id: Mapped[int] = mapped_column(
        Integer, ForeignKey("publs.publ_id", ondelete="CASCADE"), nullable=False
    )
    user_id: Mapped[int] = mapped_column(
        BigInteger, ForeignKey("users.user_id", ondelete="CASCADE")
    )
    created_at: Mapped[datetime_type] = mapped_column(
        "datetime", TIMESTAMP(precision=6), server_default=func.now(), nullable=False
    )
    updated_at: Mapped[datetime_type] = mapped_column(
        TIMESTAMP(precision=6),
        server_default=func.now(),
        nullable=False,
    )
    ip: Mapped[str | None] = mapped_column(Text)
    errors: Mapped[str | None] = mapped_column(Text)
    type: Mapped[RecordType | None] = mapped_column(Text)

    country: Mapped[str | None] = mapped_column("countrycode", Text)
    region: Mapped[str | None] = mapped_column("stateprovince", Text)
    district: Mapped[str | None] = mapped_column("county", Text)
    locality: Mapped[str | None] = mapped_column("verbatimlocality", Text)
    is_manual_location: Mapped[bool | None] = mapped_column("adm_verbatim", Boolean)
    latitude: Mapped[str | None] = mapped_column("decimallatitude", Text)
    longitude: Mapped[str | None] = mapped_column("decimallongitude", Text)

    verbatimcoordinates: Mapped[str | None] = mapped_column("verbatimcoordinates", Text)
    coordinate_uncertainty: Mapped[float | None] = mapped_column(
        "coordinateuncertaintyinmeters", Numeric
    )

    georef_source: Mapped[str | None] = mapped_column("georeferencedby", Text)
    location_remarks: Mapped[str | None] = mapped_column("locationremarks", Text)

    verbatim_date: Mapped[str | None] = mapped_column("verbatimeventdate", Text)
    date_precision: Mapped[str | None] = mapped_column("dttm_precision", Text)
    is_interval: Mapped[bool | None] = mapped_column("dttm_interval", Boolean)

    habitat: Mapped[str | None] = mapped_column(Text)
    sampling_protocol: Mapped[str | None] = mapped_column("samplingprotocol", Text)
    sampling_effort: Mapped[str | None] = mapped_column("samplingeffort", Text)
    sample_size_value: Mapped[float | None] = mapped_column("samplesizevalue", Double)
    sample_size_unit: Mapped[str | None] = mapped_column("samplesizeunit", Text)
    event_remarks: Mapped[str | None] = mapped_column("eventremarks", Text)
    field_number: Mapped[str | None] = mapped_column("fieldnumber", Text)
    catalog_number: Mapped[str | None] = mapped_column("catalognumber", Text)
    collection_code: Mapped[str | None] = mapped_column("collectioncode", Text)
    recorded_by: Mapped[str | None] = mapped_column("recordedby", Text)

    family: Mapped[str | None] = mapped_column(Text)
    genus: Mapped[str | None] = mapped_column(Text)
    species: Mapped[str | None] = mapped_column("specificepithet", Text)
    tax_verbatim: Mapped[bool | None] = mapped_column(Boolean)
    taxon_rank: Mapped[str | None] = mapped_column("taxonrank", Text)
    type_status: Mapped[str | None] = mapped_column(Text)
    accepted_name: Mapped[str | None] = mapped_column("acceptednameusage", Text)
    taxon_remarks: Mapped[str | None] = mapped_column("taxonremarks", Text)

    quantity: Mapped[float | None] = mapped_column("organismquantity", Double)
    quantity_type: Mapped[str | None] = mapped_column("organismquantitytype", Text)
    sex: Mapped[str | None] = mapped_column(Text)
    life_stage: Mapped[str | None] = mapped_column("lifestage", Text)
    occurrence_remarks: Mapped[str | None] = mapped_column("occurrenceremarks", Text)
    identification_remarks: Mapped[str | None] = mapped_column(
        "identificationremarks", Text
    )


records_table = Table(
    "records",
    Base.metadata,
    Column("datetime", TIMESTAMP(precision=6)),
    Column("ip", Text),
    Column("publ_id", Integer),
    Column("type", Text),
    Column("errors", Text),
    Column("adm_country", Text),
    Column("adm_region", Text),
    Column("adm_district", Text),
    Column("adm_loc", Text),
    Column("geo_nn", Float),
    Column("geo_ee", Float),
    Column("geo_nn_raw", Text),
    Column("geo_ee_raw", Text),
    Column("geo_origin", Text),
    Column("geo_REM", Text),
    Column("geo_uncert", Numeric),
    Column("adm_verbatim", Integer),
    Column("eve_YY", Numeric),
    Column("eve_MM", Numeric),
    Column("eve_DD", Numeric),
    Column("eve_YY_end", Numeric),
    Column("eve_MM_end", Numeric),
    Column("eve_DD_end", Numeric),
    Column("eve_day.def", Boolean),
    Column("eve_habitat", Text),
    Column("eve_effort", Text),
    Column("eve_REM", Text),
    Column("abu_coll", Text),
    Column("abu", Float),
    Column("abu_details", Text),
    Column("abu_ind_rem", Text),
    Column("tax_fam", Text),
    Column("tax_gen", Text),
    Column("tax_sp", Text),
    Column("tax_sp.def", Boolean),
    Column("tax_nsp", Boolean),
    Column("type_status", Text),
    Column("tax_REM", Text),
    Column("user_id", BigInteger),
    extend_existing=True,
)
